--- a/basic-layout.html
+++ b/basic-layout.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles/layout.css" />
   </head>
   <body>
     <header>
       <h1>Header Content</h1>
 
-      <nav>Home</nav>
+      <nav>
+        <ul class="nav-list">
+          <li><a href="">Home</a></li>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Services</a></li>
+          <li><a href="">Contact US</a></li>
+        </ul>
+      </nav>
     </header>
+    <div class="hero">
+      <div class="main">
+        <h2>Main Contect</h2>
+      </div>
+      <div class="aside">
+        <h2>Aside Content</h2>
+      </div>
+    </div>
+
+    <footer>
+      <h3>Footer Content</h3>
+    </footer>
   </body>
 </html>
